--- a/frontend/src/styles/home.css
+++ b/frontend/src/styles/home.css
@@ -183,11 +183,3 @@
   font-size: 1.5em;
   margin: 10px 0 60px 0;
 }
-
-.footer {
-  margin-top: auto;
-  background-color: black;
-  color: white;
-  text-align: center;
-  padding: 50px;
-}
